--- a/requirements.txt
+++ b/requirements.txt
@@ -36,8 +36,8 @@ psutil==5.9.4
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pure-eval==0.2.2
-pygame==2.1.2
-Pygments==2.14.0
+# pygame==2.1.2
+# Pygments==2.14.0
 python-dateutil==2.8.2
 pywin32==305
 pyzmq==25.0.0
